# wifi_mapping

./: .gitignore  CMakeLists.txt  README.md  clean.sh  gaussian_process  get_dependencies.sh  package.xml  wifi_scanner
alglib_patches/: optimization.cpp.patch  optimization.h.patch
include/: gaussian_process_regressor.h  signal_strength_estimator.h
launch/: _amcl.launch  _gmapping.launch  _save_map.launch  cim.yaml  simulated_ap.launch  wifi_mapper.launch  wifi_scanner.launch  wifi_scanner_amcl.launch  wifi_scanner_gmapping.launch
msg/: wifi_measurement.msg
scripts/: ap_simulator.py  radio_model.py  simulated_ap_node.py
src/: autonomous_mapping_node.cpp  gaussian_process_regressor.cpp  signal_strength_estimator.cpp  wifi_mapping_node.cpp  wifi_scanning_node.cpp
srv/: get_wifi_signature.srv  measurement_likelihood.srv
